--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ button {
 }
 
 body {
-background-image: url("images/Forest.jpg");
+background-image: url("Forest.jpg");
 background-size: cover;
 background-repeat: no-repeat;
 font-family: monospace;
